<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.jump</groupId>
  <artifactId>epita-reference</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <outputDirectory>build/classes</outputDirectory>
    <testOutputDirectory>build/test/classes</testOutputDirectory>

    <pluginManagement>
      <!-- This should be in the all-artifacts (once versioned) -->
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.19.1</version>
          <configuration>
            <failIfNoTests>false</failIfNoTests>
            <dependenciesToScan>
              <dependency>${project.groupId}:${project.artifactId}</dependency>
            </dependenciesToScan>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <excludeDefaultDirectories>true</excludeDefaultDirectories>
          <followSymLinks>true</followSymLinks>
          <filesets>
            <fileset>
              <directory>${basedir}/target</directory>
              <includes>
                <include>**/*</include>
              </includes>
            </fileset>
            <fileset>
              <directory>${basedir}/build</directory>
              <includes>
                <include>**/*</include>
              </includes>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <compilerArgs>
            <!--<arg>-Djava.endorsed.dirs=${endorsed.dir}</arg>-->
            <arg>-Xlint:deprecation</arg>
            <arg>-Xlint:unchecked</arg>
            <arg>-XDignore.symbol.file</arg>
          </compilerArgs>
          <fork>true</fork>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>Release</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>2.4</version>
            <configuration>
              <archive>
                <manifest>
                  <addClasspath>true</addClasspath>
                  <classpathPrefix>lib/</classpathPrefix>
                </manifest>
              </archive>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>2.8</version>
            <executions>
              <execution>
                <id>copy-3rd-party-dependencies</id>
                <phase>package</phase>
                <goals>
                  <goal>copy-dependencies</goal>
                </goals>
                <configuration>
                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <dependencies>
    <!-- Build Deps - START -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.1</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>22.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.5.13</version>
    </dependency>
  </dependencies>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>


  <repositories>
    <repository>
      <id>jump-internal-releases</id>
      <url>http://nexus:8081/nexus/content/repositories/releases/</url>
    </repository>
    <repository>
      <id>jump-internal-shapshots</id>
      <url>http://nexus:8081/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>jump-internal-thirdparty</id>
      <url>http://nexus:8081/nexus/content/repositories/thirdparty/</url>
    </repository>
    <repository>
      <id>apache-snapshots</id>
      <url>http://nexus:8081/nexus/content/repositories/apache-snapshots/</url>
    </repository>
    <repository>
      <id>codehaus-snapshots</id>
      <url>http://nexus:8081/nexus/content/repositories/codehaus-snapshots/</url>
    </repository>
    <repository>
      <id>central</id>
      <url>http://nexus:8081/nexus/content/repositories/central/</url>
    </repository>
    <repository>
      <id>EclipseLink</id>
      <url>http://nexus:8081/nexus/content/repositories/Eclipselink/</url>
    </repository>
    <repository>
      <id>opensaml</id>
      <url>http://nexus:8081/nexus/content/repositories/opensaml</url>
    </repository>
    <repository>
      <id>rescata</id>
      <url>http://nexus:8081/nexus/content/repositories/rescata/</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>jump-plugin-snapshots</id>
      <name>Jump Custom Plugin Repository (Snapshots)</name>
      <url>http://nexus:8081/nexus/content/repositories/snapshots/</url>
      <layout>default</layout>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <updatePolicy>always</updatePolicy>
      </releases>
    </pluginRepository>
    <pluginRepository>
      <id>jump-plugin-releases</id>
      <name>Jump Custom Plugin Repository (Releases)</name>
      <url>http://nexus:8081/nexus/content/repositories/releases/</url>
      <layout>default</layout>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <updatePolicy>never</updatePolicy>
      </releases>
    </pluginRepository>
  </pluginRepositories>

</project>
